<resources>
    <string name="app_name">all-rise</string>
    <string name="empty" />
    <string name="invite_code">Invite Code</string>
    <string name="continue_text">Continue</string>
    <string name="user_username">Name</string>
    <string name="user_email">Email</string>
    <string name="notification_title">Te weinig beweging</string>
    <string name="notification_content">Start nu een workout en klim omhoog in de ranglijsten!</string>
    <string name="coppied">Coppied!</string>
    <string name="click_to_copy">Click the text to copy</string>
    <string name="code_invalid">The code you\'ve submitted is not correct.</string>
    <string name="code_empty">The code you\'ve entered cannot be empty.</string>
    <string name="code_short">The code you\'ve entered is to short, all codes are 8 characters long.</string>
    <string name="code_long">The code you\'ve entered is to long, all codes are 8 characters long.</string>
    <string name="code_inactive">This code is already activated.</string>
    <string name="email_not_valid">Email is not valid.</string>
    <string name="filledCredentialsInvalid">The data entered does not meet the requirements.</string>
    <string name="all_rise_logo">All Rise Logo</string>
    <string name="sign_off">Sign off</string>
    <string name="workout">Workout</string>
    <string name="welcome">Welkom</string>
    <string name="ranking">Ranking</string>
    <string name="statistics">Statistics</string>
    <string name="history">Workout history</string>
    <string name="preferences">Preferences</string>
    <string name="zenmode">Zen mode</string>
    <string name="title_activity_workout">WorkoutActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="stopWorkout">Stop workout</string>
    <string name="rankingDay">Dag</string>
    <string name="rankingWeek">Week</string>
    <string name="rankingMonth">Maand</string>
    <string name="total">Totaal</string>
    <string name="main_service_content">Deze service houdt alle bewegingen bij.</string>
    <string name="main_service_title">Bewegings Service</string>
    <string name="disclaimer_gdpr">By logging in you agree to our privacy policy.</string>
    <string name="startWorkout">Start workout</string>
    <string name="stopWorkoutConfirmation">Are you sure you would like to save your progress?</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="mijn_statistieken">My statistics</string>
    <string name="time_spend_exercises">Totale hoeveelheid seconden besteed aan oefeningen: </string>
    <string name="walkbutton">Walking</string>
    <string name="seconds"> seconds</string>
    <string name="workout_history">Oefening Geschiedenis</string>
    <string name="today"> Vandaag </string>
    <string name="this_week"> This Week </string>
    <string name="this_month"> This Month </string>
    <string name="_1_uur_actief">1 uur actief</string>
    <string name="_2_uur_actief">2 uur actief</string>
    <string name="_3_uur_actief">3 uur actief</string>
    <string name="_4_uur_actief">4 uur actief</string>
    <string name="annuleer_zenmodus">Annuleer zenmodus</string>
    <string name="multiplierText">Deze workout geeft je %d punten per seconde.</string>
</resources>
